@@ -1,1 +1,57 @@
 # FinalAccordGroupPack
+
+## Prerequisites
+To use this modpack, please download 
+* [MultiMC](https://https://multimc.org/#Download)
+* [This modpack](https://codeload.github.com/mech-a/FinalAccordGroupPack/zip/master)
+
+## Installing
+1. Extract MultiMC into a folder on your desktop using your favorite utility.
+2. Open MultiMC.exe inside of the folder you extracted.
+3. Follow the on-screen instructions to install.
+4. You should now be on the home screen; at the top there should be buttons labeled "Add Instance", "Folders", "Settings", etc.
+5. Click Add Instance
+6. Name it whatever you'd like and add a group if you'd like as well. 
+7. Choose minecraft version **1.12.2**
+8. Hit "OK"
+9. Click and then right click on the instance in the main screen. You should see a dropdown menu. Choose edit instance from that.
+10. You should see a screen with a left column stating things such as "Version", "Loader mods", "Resource packs", etc.
+11. Make sure you are on the "Version" tab and click "Install Forge" on the right-hand side. Choose version **14.23.5.2768** and hit ok. It is the _not_ the current version with the star.
+12. Click on the "Loader mods" tab and click "View Folder" in the bottom right.
+13. You should now have an explorer screen opened with the mods folder. Open up the downloaded "FinalAccordGroupPack-master.zip" file.
+14. Navigate into the folder until you find another zip labeled "GroupPack-021519.zip". Open this again and you should be presented with a list of .jar files.
+15. Drag and drop these files into the explorer window that was opened in Step 12.
+
+Congratulations! You have now installed the modpack. Launch and click "Connect to FinalAccord" to join.
+
+## Settings
+In the prior "edit instance" window, click on the "Settings" tab. You should see checkboxes near "Java installation", "Memory", and "Java arguments". Check on both Memory and Java arguments.
+In memory, change the minimum and maximum to match around 2-3GB. You won't be able to boot the modpack with less than 2GB. Personally, I use 6GB.
+In Java arguments, paste in this string:
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-XX:SurvivorRatio=2 -XX:+DisableExplicitGC -d64 -XX:+UseConcMarkSweepGC -XX:+AggressiveOpts
+
+In game, in settings, tweak things as necessary. I recommend playing on low chunks, 6 or so.
+If you experience sharp lagspikes, continually add 1 gig of RAM until it stops. If it doesn't stop, Change the "BetterFPS Options" in the Settings menu of Minecraft to utilize a different algorithm.
+
+## Notes
+I highly recommend putting these Notes into "Edit Instance">"Notes"
+
+>Core Mods & getting started:
+>Applied Energistics 2 - https://ae2.ae-mod.info/
+>Better Builder's Wands - diagonal 2 sticks 1 bar/ore
+>Thaumcraft - mine a vis crystal
+>Botania - lexicana botanica (book & sapling)
+>IC2 - https://wiki.industrial-craft.net/index.php?title=Tutorial:First_Steps
+>Chisel - just make one!
+>Thermal - ???
+>Draconic Evolution - get the ore, surround with stone!
+>EnderIO - a tutorial video
+>Twilight Forest - https://i.imgur.com/PSDR3zA.png
+>Tinker's Construct - use Materials and Me, or refer to the curseforge page for the introductory 4 stations.
+>Immersive Engineering - Book with a lever
+>BuildCraft - https://ftb.gamepedia.com/Getting_Started_(BuildCraft)
+
+
+
+
